--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,1 +1,1 @@
-<p>&copy; {{ now.Year }} {{ site.Title }} — <a href="mailto:feedback@youarebeinglied2.com">feedback@youarebeinglied2.com</a></p>
+<p>&copy; {{ now.Year }} {{ site.Title }}
