Refactor footer to add site description class and improve styling

--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,1 +1,2 @@
-<p>This page should fill you with rage</p>
+<p class="site-description" >This page should fill you with rage</p>
+<p class="site-description" style="margin-bottom: 2rem;">send links to <a href="mailto:feedback@youarebeinglied2.com">feedback@youarebeinglied2.com</a></p>
